force-app/main/default/objects/ABML_Report_Integration__mdt/ABML_Report_Integration__mdt.object-meta.xml
<CustomObject>
    <description>It is used in ABML Reports Integration.</description>
    <label>ABML Report Integration</label>
    <pluralLabel>ABML Report Integrations</pluralLabel>
</CustomObject>