force-app/main/default/objects/ABML_Report_Integration__mdt/fields/DataString__c.field-meta.xml
<CustomField>
    <fullName>DataString__c</fullName>
    <label>DataString</label>
    <length>255</length>
    <type>Text</type>
</CustomField>